Cards: Fix style to enable scrollbars on big texts.

--- a/Scrummer/Styles/05. Cards.css
+++ b/Scrummer/Styles/05. Cards.css
@@ -63,6 +63,7 @@
     max-height: 250px;
     padding: 5px;
     border-radius: 2px;
+    overflow: auto;
 }
 
 .divCard .divTitle{
